Enable DEBUG mode - basically log in with admin without any password (workaround for the password decryption error); Add UI checkbox model for the instructor to choose "Team Exercise" when creating an exercise. The information gets passed, but still no exercise gets created.

--- a/src/main/webapp/i18n/de/programmingExercise.json
+++ b/src/main/webapp/i18n/de/programmingExercise.json
@@ -18,7 +18,8 @@
             "baseRepositoryUrl": "Base Repository Url",
             "baseBuildPlanId": "Base Build Plan Id",
             "publishBuildPlanUrl": "Publish Build Plan Url",
-            "allowOnlineEditor": "Allow Online Editor"
+            "allowOnlineEditor": "Allow Online Editor",
+            "teamExercise": "Team Exercise"
         }
     }
 }
