Create Team entity with jhipster; Create TeamManager entity with jhipster; Add save and find functionalities to TeamManager; Connect the logic with Participation - When the user clicks "Start Exercise" a Participation is created and there we: Checking if Exercise is of TeamExercise Type; if yes, go through all teams in a SQL query and get all that have a free slot; Then not to discriminate pick the first available;
Minor issues with the mysql server on my docker, will fix before next push

--- a/src/main/webapp/i18n/de/exercise.json
+++ b/src/main/webapp/i18n/de/exercise.json
@@ -1,5 +1,5 @@
 {
-    "artemisApp": {
+    "arTeMiSApp": {
         "exercise" : {
             "home": {
                 "title": "Exercises",
@@ -18,7 +18,9 @@
             "title": "Title",
             "releaseDate": "Release Date",
             "dueDate": "Due Date",
+            "exerciseType": "Exercise Type",
             "participations": "Participations",
+            "teamManager": "Team Manager",
             "course": "Course"
         }
     }
