--- a/src/main/webapp/i18n/en/exercise.json
+++ b/src/main/webapp/i18n/en/exercise.json
@@ -1,5 +1,5 @@
 {
-    "artemisApp": {
+    "arTeMiSApp": {
         "exercise" : {
             "home": {
                 "title": "Exercises",
@@ -18,12 +18,10 @@
             "title": "Title",
             "releaseDate": "Release Date",
             "dueDate": "Due Date",
+            "exerciseType": "Exercise Type",
             "participations": "Participations",
+            "teamManager": "Team Manager",
             "course": "Course"
-        },
-        "exerciseLtiConfiguration" : {
-            "lti": "LTI",
-            "configurationForExercise": "LTI Configuration for Exercise {{ title }}"
         }
     }
 }
