Added Exercise code

--- a/src/main/webapp/i18n/de/course.json
+++ b/src/main/webapp/i18n/de/course.json
@@ -21,7 +21,8 @@
             "exercises": "Aufgaben",
             "programmingExercises": "Programmieraufgaben",
             "quizExercises": "Quizaufgaben (Beta)",
-            "modelingExercises": "Modellierungsaufgaben (Beta)"
+            "modelingExercises": "Modellierungsaufgaben (Beta)",
+            "modelComparisonExercises": "Modell-Vergleich-Aufgaben"
         }
     }
 }
