--- a/src/main/webapp/i18n/en/course.json
+++ b/src/main/webapp/i18n/en/course.json
@@ -21,7 +21,8 @@
             "exercises": "Exercises",
             "programmingExercises": "Programming Exercises",
             "quizExercises": "Quiz Exercises (Beta)",
-            "modelingExercises": "Modeling Exercises (Beta)"
+            "modelingExercises": "Modeling Exercises (Beta)",
+            "modelComparisonExercises": "Modeling Comparison Exercises"
         }
     }
 }
