--- a/src/main/webapp/i18n/en/modelComparisonExercise.json
+++ b/src/main/webapp/i18n/en/modelComparisonExercise.json
@@ -1,5 +1,5 @@
 {
-    "arTeMiSApp": {
+    "artemisApp": {
         "modelComparisonExercise" : {
             "home": {
                 "title": "Model Comparison Exercises",
